--- a/static/styles/signup.css
+++ b/static/styles/signup.css
@@ -1,4 +1,3 @@
-
 * {
 	margin: 0px; 
 	padding: 0px; 
@@ -165,16 +164,22 @@ iframe {
 
 /*------------------------------------------------------------------
 [ Form ]*/
+.hidden{
+    display: none;
+}
+.oform{
+    width: 100%;
 
+}
 .login100-form {
-  width: 100%;
+    width: 100%;
 }
 
 .login100-form-title {
   display: block;
   font-family: 'Poppins';
   font-weight: bold;
-  font-size: 39px;
+  font-size: 2em;
   color: #333333;
   line-height: 1.2;
   text-align: center;
@@ -184,7 +189,11 @@ iframe {
 
 /*------------------------------------------------------------------
 [ Input ]*/
-
+#wrap-input100{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
 .wrap-input100 {
   width: 100%;
   position: relative;
