--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,18 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form method="post">
-        {% csrf_token %}
-    {{ signup_form.as_p }}
-    <button type="submit" >
-        Register
-     </button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block imports %}
+{% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"><!--===============================================================================================-->
+<!--===============================================================================================-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<!--===============================================================================================-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/util.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'styles/signup.css' %}"> {% endcomment %}
+{% endblock imports %}
+
+
+{% block body %}
+
+    {{signup_form.as_p}}
+            {% comment %} <form class="oform" method="post">
+               
+                      <select type="radio" id="id_role" name="role" value="volunteer">
+                    <span>
+                            <option value="VOLUNTEER">
+                                <label for="volunteer">VOLUNTEER</label>
+                            </option>
+                    </span>
+                    <span>
+                        <option value="VOLUNTEER">
+                            <label for="organisation">ORGANISATION</label>
+                        </option>
+                    </span>
+                    </select>
+                </div>
+                {% csrf_token %}
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Enter Your Email</span>
+                    {{signup_form.email}}
+                </div>
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Enter Your username</span>
+                    {{signup_form.username}}
+                </div>
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Enter Your phone</span>
+                    {{signup_form.phone}}
+                </div>
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Enter Your password</span>
+                    {{signup_form.password1}}
+                </div>
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Confirm password</span>
+                    {{signup_form.password2}}
+                    <p>We'll get back to you ASAP</p>
+                </div>
+            </form>
+            <form class="login100-form hidden">
+                <div id="wrap-input100">
+    
+                      <select type="radio" id="id_role" name="role" value="volunteer">
+                    <span>
+                            <option value="VOLUNTEER">
+                                <label for="volunteer">VOLUNTEER</label>
+                            </option>
+                    </span>
+                    <span>
+                        <option value="VOLUNTEER">
+                            <label for="organisation">ORGANISATION</label>
+                        </option>
+                    </span>
+                    </select>
+                </div>
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Full Name</span>
+                    
+                    <input class="input100" type="text" name="username" placeholder="Type your full name">
+                    
+            
+                </div>
+
+                <div class="wrap-input100  m-b-23">
+                    <span class="label-input100">Username</span>
+                    
+                    <input class="input100" type="text" name="username" placeholder="Type your username">
+                    
+            
+                </div>
+
+                <div class="wrap-input100 m-b-23">
+                    <span class="label-input100">Password</span>
+                    <input class="input100" type="password" name="pass" placeholder="Type your password">
+                    
+                </div>
+                <div class="wrap-input100 m-b-20">
+                    <span class="label-input100">Confirm Password</span>
+                    <input class="input100" type="password" name="pass" placeholder="Confirm your password">
+            
+                </div>
+            </form>
+            <div class="container-login100-form-btn">
+                <div class="wrap-login100-form-btn">
+                    <div class="login100-form-bgbtn"></div>
+                    <button class="login100-form-btn" type="submit">
+                        signup
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</form> {% endcomment %}
+{% comment %} {{ signup_form.as_p }} {% endcomment %}
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="/static/scripts/signup.js"></script>
+{% endblock body %}
