--- a/createevent.css
+++ b/createevent.css
@@ -12,12 +12,14 @@ body{
 }
 .wrapper{
     margin: 1em;
-    width: 500px;
+    width: 70%;
     padding: 20px;
     background-color: white;
     border-radius: 20px;
 }
-
+h1{
+    margin: 20px 20px;
+}
 .wrapper label{
     font-size: 1.2rem;
     line-height: 1.3;
