--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %} 
 {% load static %} 
+{% load addcss%}
 {% comment %} {% load addcss %}  {% endcomment %}
 {% block title %}
 <title>Login</title>
 {% endblock title %}
-
+{% block imports %}
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="{% static '/styles/loginstyle.css'%}">
+{% endblock imports %}
 {% block body %}
 
-<form method="post">
+
+
+{% comment %} <form method="post">
 	{% csrf_token %}
 	<!-- Email input -->
 	<div class="form-outline mb-4 form-white">
@@ -34,9 +45,48 @@
 	<div class="d-flex justify-content-center">
 		<!-- Simple link -->
 		
-		{% comment %} <a href="{% url 'password_reset' %}">Forgot Password?</a> {% endcomment %}
 	</div>
 	
 	
-</form>
+</form> {% endcomment %}
+
+
+
+
+
+
+
+
+<div class="container">
+	<form method="post">
+		{% csrf_token %}
+		<!-- Email input -->
+		<div class="form-group">
+			<label for="email">Email :</label>
+			{{form.username|addcss:"form-control"}}
+		</div>
+		
+		<!-- Password input -->
+		<div class="form-group">
+			<label for="password">Password : </label>
+			{{form.password|addcss:"form-control"}}
+			
+		</div>
+		<!-- Submit button -->
+		<button type="submit" class="btn btn-primary">
+			Sign in
+		</button>
+
+		<!-- 2 column grid layout for inline styling -->
+		
+		<div class="d-flex justify-content-center">
+			<!-- Simple link -->
+			
+			
+		</div>
+		
+		
+	</form>
+
+</div>
 {% endblock body %}
