--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -9,15 +9,21 @@ body, html {
 	font-family: 'poppins', sans-serif;
 }
 body{
-  background-image: url(/static/styles/images/low-poly-grid-haikei.png);
-  display: grid;
-  place-items: center;
+  /* background-image: url(/static/styles/images/low-poly-grid-haikei.png); */
+  /* display: grid; */
+  /* place-items: center; */
+  background-color: royalblue;
+  position: relative;
+
 }
 
 
 .wrapper{
+    position: absolute;
     display: flex;
-    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 
@@ -55,7 +61,7 @@ body{
   .login100-form-bgbtn{
     display: flex;
     justify-content:space-evenly;
-    border-radius:;
+    /* border-radius:; */
     
   }
   .login100-form-bgbtn button{
