--- a/static/styles/loginstyle.css
+++ b/static/styles/loginstyle.css
@@ -5,6 +5,8 @@
 }
 body{
     background-color: royalblue;
+ position: relative;
+  
 }
 h1{
     position: absolute;
@@ -16,10 +18,10 @@ h1{
 .container{
     padding: 50px;
     width: 30%;
-    position:absolute;
+    position:relative;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    /* left: 50%; */
+    /* transform: translate(-50%,-50%); */
     background: white;
     border-radius: 20px ;
     display: flex;
